# hivewatch

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: check-docs.yml  docs.yml  pre-release.yml  publish.yml  tests.yml
docs/: appfl.rst  changelog.rst  conf.py  contributing.rst  emitters.rst  examples.md  get-started.md  index.rst  installation.rst  map.rst  quickstart.rst  requirements.txt
docs/_static/css/: custom.css
examples/: appfl_server.py  fedviz_map.html  vanilla.py
examples/appfl/: README.md  map_utils.py  run_client.py  run_server.py
examples/appfl/resources/configs/: client_2.yaml  server_fedavg.yaml
examples/flwr-demo/: README.md  pyproject.toml
examples/flwr-demo/demo/: __init__.py  client_app.py  server_app.py  task.py
examples/nvflare/: README.md  client.py  job.py
fedviz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hivewatch-s3/: README.md  pyproject.toml
hivewatch-s3/examples/: appflx_entry_point_with_hivewatch.py  s3_smoke_test.py
hivewatch-s3/src/hivewatch_s3/: __init__.py  appflx.py  metadata.py  run.py  schema.py  storage.py
mlruns/0/: meta.yaml
output/: result_Server_2026-03-12-02-48-36.txt  result_Server_2026-03-12-02-50-07.txt  result_Server_2026-03-12-03-15-13.txt  result_Server_2026-03-12-16-34-40.txt  result_Server_2026-03-12-16-39-15.txt  result_Server_2026-03-12-16-45-29.txt  result_Server_2026-03-12-16-51-14.txt  result_Server_2026-03-13-00-36-08.txt
resources/config_gc/mnist/: clients.yaml
src/fedviz/: __init__.py  _state.py  cli.py  map_metadata.py  map_server.py  run.py  schema.py
src/fedviz/emitters/: __init__.py  mlflow_emitter.py  sse_emitter.py  wandb_emitter.py
src/fedviz/geo/: __init__.py  utils.py
src/fedviz/integrations/: __init__.py  grpc_geo.py
src/fedviz/map/: __init__.py  metadata.py  server.py
src/hivewatch/: __init__.py  _state.py  cli.py  run.py  schema.py
src/hivewatch/emitters/: __init__.py  mlflow_emitter.py  sse_emitter.py  wandb_emitter.py
src/hivewatch/geo/: __init__.py  utils.py
src/hivewatch/map/: hivewatch_map.html  server.py
tests/: README.md  cli_test.py  map_metadata_test.py  map_server_test.py  mlflow_emitter_test.py  run_test.py  schema_test.py  sse_emitter_test.py  wandb_emitter_test.py
wandb/: latest-run
wandb/run-20260312_025007-yonnef03/: run-yonnef03.wandb
wandb/run-20260312_025007-yonnef03/files/: config.yaml  wandb-metadata.json
wandb/run-20260312_031515-m8io6cno/: run-m8io6cno.wandb
wandb/run-20260312_031515-m8io6cno/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260312_163434-r9yfywh4/: run-r9yfywh4.wandb
wandb/run-20260312_163434-r9yfywh4/files/: config.yaml  wandb-metadata.json
wandb/run-20260312_163913-8kmq629k/: run-8kmq629k.wandb
wandb/run-20260312_163913-8kmq629k/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260312_164527-409u3t7p/: run-409u3t7p.wandb
wandb/run-20260312_164527-409u3t7p/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260312_165112-2sb7dyak/: run-2sb7dyak.wandb
wandb/run-20260312_165112-2sb7dyak/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260313_001910-kmtaf3dt/files/: wandb-metadata.json
wandb/run-20260313_002503-inxvae70/: run-inxvae70.wandb
wandb/run-20260313_002503-inxvae70/files/: config.yaml  wandb-metadata.json
wandb/run-20260313_003607-u26lda4o/: run-u26lda4o.wandb
wandb/run-20260313_003607-u26lda4o/files/: config.yaml  wandb-metadata.json  wandb-summary.json
