[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fedviz"
version = "0.1.0"
description = "Framework-agnostic monitoring toolkit for federated and distributed ML"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

[project.scripts]
hivewatch = "fedviz.cli:main"
fedviz = "fedviz.cli:main"

[project.optional-dependencies]
wandb  = ["wandb>=0.16"]
mlflow = ["mlflow>=2.0"]
all    = ["wandb>=0.16", "mlflow>=2.0"]
dev    = ["coverage", "pytest", "wandb>=0.16", "mlflow>=2.0"]
docs   = [
    "sphinx>=8.0",
    "furo>=2024.8.6",
    "myst-parser>=3.0",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["fedviz*"]
