[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hivewatch-s3"
version = "0.1.0"
description = "S3-first HiveWatch runtime for APPFLx/ECS federated learning jobs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
  "boto3>=1.26",
  "requests>=2.28",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["hivewatch_s3*"]
